# task-recorder-cui

./: .gitignore  CLAUDE.md  LICENSE  README.en.md  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-04-14-ci-setup.md  2026-04-15-i18n.md  2026-04-15-menu.md  2026-04-15-timer.md  2026-04-16-menu-realtime-tick.md
docs/superpowers/specs/: 2026-04-14-ci-setup-design.md  2026-04-15-i18n-design.md  2026-04-15-menu-design.md  2026-04-15-timer-design.md  2026-04-16-menu-realtime-tick-design.md
src/task_recorder_cui/: __init__.py  __main__.py  _timer_daemon.py  cli.py  config.py  db.py  i18n.py  io.py  main.py  menu.py  models.py  repo.py
src/task_recorder_cui/commands/: _summary.py  add.py  all.py  cat.py  config.py  month.py  now.py  range.py  start.py  stop.py  timer.py  today.py  week.py
src/task_recorder_cui/locales/: __init__.py  en.py  ja.py
src/task_recorder_cui/services/: __init__.py  timer.py
src/task_recorder_cui/utils/: paths.py  time.py  validate.py
tests/: conftest.py  test_add.py  test_all.py  test_cat.py  test_cli.py  test_commands_config.py  test_commands_timer.py  test_config.py  test_coverage_fill.py  test_db.py  test_db_migrate.py  test_i18n.py  test_i18n_coverage.py  test_io.py  test_menu_flow.py  test_menu_pure.py  test_menu_smoke.py  test_menu_timer.py  test_month.py  test_now.py  test_range.py  test_repo_recent.py  test_repo_timer.py  test_services_timer.py  test_start.py  test_stop.py  test_summary.py  test_time.py  test_timer_daemon.py  test_today.py  test_utils_paths.py  test_validate.py  test_week.py
