[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "task-recorder-cui"
version = "0.1.0"
description = "日々の時間の使い方を記録するCUIツール"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Yumeno Yuuka" },
]
dependencies = [
    "rich",
    "questionary",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "jupyterlab",
    "pandas",
]

[project.scripts]
tsk = "task_recorder_cui.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "D"]
ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D203",  # 1 blank line required before class docstring (D211と競合)
    "D213",  # Multi-line docstring summary should start at the second line (D212と競合)
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
# 日本語のテスト関数名を許容
"tests/**.py" = ["N802"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["task_recorder_cui"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"